Added seller details and line numbers to PurchaseOrder entities
Introduced seller information and line number fields to `PurchaseOrder` and `PurchaseOrderLine` entities. Updated mappers, database adapters, and DTOs to handle these changes. Enhanced tracking capabilities by adding UUID-based reconstruction constructors and logging within relevant classes.