@@ -3,15 +3,18 @@ package be.kdg.prog6.warehousingContext.adapters.out.db;
 import be.kdg.prog6.warehousingContext.domain.PurchaseOrderFulfillmentTracking;
 import be.kdg.prog6.warehousingContext.ports.out.PurchaseOrderFulfillmentRepositoryPort;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class PurchaseOrderFulfillmentDatabaseAdapter implements PurchaseOrderFulfillmentRepositoryPort {
+@Slf4j
+public class PurchaseOrderFulfillmentTrackingDatabaseAdapter implements PurchaseOrderFulfillmentRepositoryPort {
     
     private final PurchaseOrderFulfillmentTrackingJpaRepository jpaRepository;
     private final PurchaseOrderFulfillmentTrackingJpaMapper mapper;
@@ -19,7 +22,8 @@ public class PurchaseOrderFulfillmentDatabaseAdapter implements PurchaseOrderFul
     @Override
     public void save(PurchaseOrderFulfillmentTracking fulfillment) {
         PurchaseOrderFulfillmentTrackingJpaEntity entity = mapper.toJpaEntity(fulfillment);
-        jpaRepository.save(entity);
+        PurchaseOrderFulfillmentTrackingJpaEntity savedEntity = jpaRepository.save(entity);
+        log.debug("Saved PO fulfillment tracking: {}", savedEntity.getTrackingId());
     }
     
     @Override
@@ -33,7 +37,7 @@ public class PurchaseOrderFulfillmentDatabaseAdapter implements PurchaseOrderFul
         return jpaRepository.findByStatus(status)
                 .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Override
@@ -50,5 +54,11 @@ public class PurchaseOrderFulfillmentDatabaseAdapter implements PurchaseOrderFul
                 .stream()
                 .map(mapper::toDomain)
                 .collect(Collectors.toList());
+    }
+
+    @Override
+    public Optional<PurchaseOrderFulfillmentTracking> findById(UUID trackingId) {
+        return jpaRepository.findById(trackingId)
+                .map(mapper::toDomain);
     }
 } 
